Bug 1524385 - Set the current clip chain on the stacking context item. r=kvark

Differential Revision: https://phabricator.services.mozilla.com/D18527

--HG--
extra : moz-landing-system : lando